# kepost

./: .coveragerc  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  SECURITY.md  cookiecutter-config-file.yml  crash-20230429-202559-groot-dipy_tensor_wf-27fb2faa-d502-411b-811d-6679731e40dc.pklz  crash-20230429-202559-groot-dipy_tensor_wf-7affb2e5-297c-4870-a243-c103859b4c3a.pklz  pyproject.toml  requirements.txt  run_kepost.py  run_qsipost.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  github-actions.yml
data/tests/: config.toml
docker/: README.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
kepost/: __about__.py  __init__.py  __main__ copy.py  __main__.py  config.py
kepost/cli/: parser.py  run.py  workflow.py
kepost/config/: keprep.json
kepost/interfaces/: bids.py  mrtrix3.py
kepost/workflows/: base.py
kepost/workflows/anatomical/: anatomical.py
kepost/workflows/anatomical/procedures/: crop_to_gm.py  derivatives.py  freesurfer.py
kepost/workflows/diffusion/: diffusion.py
kepost/workflows/diffusion/procedures/: coregister_atlas.py  coregister_tissues.py  derivatives.py
kepost/workflows/utils/: bids.py  queries.py
niworkflows/sub-12/anat/: sub-12_space-T1w_res-T1w_desc-preproc_dseg.json
qsipost/: __about__.py  __init__.py  __main__ copy.py  __main__.py  config.py
qsipost/bids/config/: configurations.py  qsiprep.json
qsipost/bids/layout/: __init__.py  layout.py
qsipost/cli/: parser.py  run.py  workflow.py
qsipost/interfaces/: bids.py  dipy.py  mrtrix3.py
qsipost/parcellations/atlases/: atlas.py
qsipost/workflows/: base.py
qsipost/workflows/anatomical/: anatomical.py
qsipost/workflows/anatomical/procedures/: derivatives.py  freesurfer.py  register_atlas.py
qsipost/workflows/diffusion/: diffusion.py
qsipost/workflows/diffusion/procedures/: coregister_atlas.py  derivatives.py  tensor_estimation.py
qsipost/workflows/utils/: bids.py  queries.py
src/kepost/: __init__.py  cli.py  config.py
src/kepost/atlases/: utils.py
src/kepost/atlases/available_atlases/: __init__.py  available_atlases.py
src/kepost/data/: boilerplate.bib
src/kepost/data/quality_assurance/: reports.py
src/kepost/interfaces/bids/: __init__.py  bids.py  utils.py
src/kepost/interfaces/dipy/: __init__.py  reconst.py
src/kepost/workflows/: base.py  descriptions.py
tests/: __init__.py  test_anatomical_wf.py  test_atlases.py  test_config.py  test_kepost.py
tests/diffusion/: test_connectomes.py  test_coregistrations.py  test_parcellations.py  test_qc_wf.py  test_tensor_estimation.py  test_tractography.py
tests/test_example/: test_hello.py
work/20241114-155425_4875fb05-217f-4491-8dfc-d6d98dfdcc90/bids_db/: layout_index.sqlite
(+158 files in other folders)
